# borkov

./: registry.toml
agents/borkov/: Dockerfile  README.md  borkov_result_formatter.py  borkov_simulation.py  coral-agent.toml  main.py  pyproject.toml  requirements.txt  rss_agent.py  test_agent.py
agents/pr-report/: Dockerfile  README.md  coral-agent.toml  gcp_storage.py  main.py  pyproject.toml  report_generator.py  requirements.txt  rss_agent.py  test_agent.py
